# ConfigReader

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/WriteAndReadFile/: CMakeLists.txt  main.cpp
examples/WriteAndReadString/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  ConfigReaderVersion.h  ConfigReaderVersion.h.in
